updated VGT experience

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                     <li> Conducted site suitability analysis for rice cultivation, optimizing agricultural practices for increased productivity.</li>
                     <li> Successfully managed a project of vector data creation for an entire city, helping the government in efficient urban planning.</li>
                     <li> Produced accurate vector data and estimated temporal changes for private properties, aiding clients in making real estate decisions.</li>
-                    <li> Prepared detailed reports, actively engaged in client meetings, and effectively presented results, ensuring clear communication of findings and recommendations.</li>
+                    <li> Prepared detailed reports, produced maps actively engaged in client meetings, and effectively presented results, ensuring clear communication of findings and recommendations to technical and non-technical colleagues.</li>
                 </ul>
         </div>
       </div>
@@ -571,6 +571,7 @@
 </body>
 
 </html>
+
 
 
 
